TM-13138 - BROKEN: Moving back-end endpoint and stylistic changes.

--- a/src/main/webapp/tds/web-app/css/page/module/planning/planning-dashboard.component.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/planning/planning-dashboard.component.sass
@@ -63,8 +63,16 @@
       background-image: url('../../../images/news_bg.jpg')
       background-size: contain
       padding: 15px
+    .discovery-phase
+      width: 285px
+    .analysis-phase
+      width: 285px
     .execution-phase
-      width: 63%
+      width: 61%
+      .row-fluid
+        width: 100%
+        .execution-table
+          overflow-y: hidden
   .dashboard-bar-base
     padding: 0px
     height: 24px
