TM-14753 Fix Please replace the missing "Filter" placeholder text in one of the Asset List columns 	Setting the Filter using the GLOBAL.FILTER setting 	Pass the placeholder input variable to the asset tag selector component

--- a/src/main/webapp/tds/web-app/app-js/modules/assetManager/components/asset-view-grid/asset-view-grid.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/assetManager/components/asset-view-grid/asset-view-grid.component.html
@@ -150,7 +150,8 @@
 			<!-- Default Generic Filter Template -->
 			<ng-template kendoGridFilterCellTemplate *ngIf="column.property !== 'tagAssets'">
 				<div class=" has-feedback" style="margin-bottom:0px;">
-					<input type="text" class="form-control" name="{{column.domain}}.{{column.property}}" placeholder="Filter" value=""
+					<input type="text" class="form-control" name="{{column.domain}}.{{column.property}}" 
+							placeholder="{{'GLOBAL.FILTER' | translate}}" value=""
 					       [(ngModel)]="column.filter" (keyup)="onFilterKeyUp($event, column)" (keydown)="onFilterKeyDown($event)" input-paste (onPaste)="onPaste(column)">
 					<span *ngIf="column.filter" (click)="clearText(column)" style="cursor:pointer;color:#656565;pointer-events:all" class="fa fa-times form-control-feedback component-action-clear-filter"
 					      aria-hidden="true"></span>
@@ -159,7 +160,8 @@
 			<!-- Asset Tags Filter Template -->
 			<ng-template kendoGridFilterCellTemplate *ngIf="column.property === 'tagAssets'">
 				<tds-asset-tag-selector #tagSelector
-				                        [tagList]="metadata.tagList"
+										[tagList]="metadata.tagList"
+										placeholder="{{'GLOBAL.FILTER' | translate}}"
 				                        [viewFilterModel]="column.filter"
 				                        (valueChange)="onTagFilterChange(column, $event)">
 				</tds-asset-tag-selector>
