TM-14753 Add css classes for Firefox

--- a/src/main/webapp/tds/web-app/css/shared/components/tds-asset-tag-selector.sass
+++ b/src/main/webapp/tds/web-app/css/shared/components/tds-asset-tag-selector.sass
@@ -81,7 +81,9 @@
   .k-switch.k-state-focused
     box-shadow: unset
   .k-searchbar
-    .k-input::-webkit-input-placeholder
+    .k-input::-webkit-input-placeholder,
+    .k-input::-moz-placeholder,
+    .k-input:-ms-input-placeholder
       font-size: 14px
       color: $asset-tag-placeholder
 /* Global, but protected by the scope */
