--- a/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/tranman-menu/tranman-menu.component.html
+++ b/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/tranman-menu/tranman-menu.component.html
@@ -301,7 +301,7 @@
                         <a href="/tdstm/reports/applicationConflicts">Application Conflicts</a>
                     </li>
                     <li class="menu-child-item menu-reports-server-conflicts">
-                        <a href="/tdstm/reports/serverConflicts">Server Conflicts</a>
+											<a [routerLink]="['reports','serverConflicts']" >Server Conflicts</a>
                     </li>
                     <li class="menu-child-item menu-reports-database-conflicts">
                         <a href="/tdstm/reports/databaseConflicts">Database Conflicts</a>
