--- a/src/main/webapp/tds/web-app/app-js/modules/auth/components/login/login.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/auth/components/login/login.component.html
@@ -1,1 +1,37 @@
-HELLO!
+<div class="login-box login-notice">
+
+    <div class="login-box-body">
+        <div class="login-logo">
+            <a href="http://www.transitionaldata.com/service/transitionmanager" target="new">
+                <img src="/tdstm/assets/images/TMLoginLogo.gif" border="0" alt="Learn more about TransitionManager">
+            </a>
+        </div>
+
+        <h1 class="login-box-msg">Sign in to start your session</h1>
+
+        <form action="signIn" name="loginForm" class="loginPageFormWrapper">
+            <div class="form-group has-feedback">
+                <input type="text" class="form-control" name="username" id="usernameid" placeholder="Enter your username" title="Enter your username" autocorrect="off" autocapitalize="off" >
+                <span class="glyphicon glyphicon-user form-control-feedback"></span>
+            </div>
+            <div class="form-group has-feedback">
+                <input type="password" class="form-control" name="password" autocorrect="off" autocapitalize="off" placeholder="Enter your password" title="Enter your password"/>
+                <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+            </div>
+            <div class="row">
+                <div class="col-xs-8">
+                </div>
+                <!-- /.col -->
+                <div class="col-xs-4">
+                    <button type="submit" id="submitButton" class="btn btn-primary btn-block btn-flat">Sign In</button>
+                </div>
+                <!-- /.col -->
+            </div>
+        </form>
+
+        <div class="loginIframe">
+            <pre><a href="/tdstm/auth/forgotMyPassword" style="font-weight: normal;">Forgot your password?</a></pre>
+        </div>
+        <div class="buildInfo">// buildInfo //</div>
+    </div>
+</div>
