TM-14683 - Fix the hover on the successor and predecessor

--- a/src/main/webapp/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/src/main/webapp/tds/web-app/css/elements/component/task-detail-component.sass
@@ -24,7 +24,7 @@
       height: 200px
       tbody tr:hover,
       tbody tr.k-state-hover
-        color: $color--black
+        color: initial
   .modal-content.task-create-component
     min-height: 720px
     min-width: 769px
